// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options resolve: resolved options - react 1`] = `
Object {
  "exclude": Array [],
  "extendRoute": undefined,
  "extensions": Array [
    "tsx",
    "jsx",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\)\\$/,
  "importMode": "sync",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "pages": Array [
    Object {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "replaceSquareBrackets": false,
  "resolver": "react",
  "root": Any<String>,
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;

exports[`Options resolve: resolved options 1`] = `
Object {
  "exclude": Array [],
  "extendRoute": undefined,
  "extensions": Array [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "importMode": "async",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "pages": Array [
    Object {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "replaceSquareBrackets": false,
  "resolver": "vue",
  "root": Any<String>,
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;
